tools/gd/src/git/snapshots/gd__git__tests__snapshot_diff_args_commit.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::Commit(\"abc123\".into()).diff_args()"
---
[
    "diff",
    "abc123~1",
    "abc123",
]
