tools/gd/src/git/snapshots/gd__git__tests__snapshot_diff_args_range.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::Range(\"main\".into(), \"HEAD\".into()).diff_args()"
---
[
    "diff",
    "main",
    "HEAD",
]
