tools/gd/src/git/snapshots/gd__git__tests__snapshot_diff_args_staged.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::Staged.diff_args()"
---
[
    "diff",
    "--staged",
]
