tools/gd/src/git/snapshots/gd__git__tests__snapshot_diff_args_working_tree.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::WorkingTree.diff_args()"
---
[
    "diff",
]
