tools/gd/src/git/snapshots/gd__git__tests__snapshot_full_context_args_commit.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::Commit(\"abc123\".into()).diff_args_full_context()"
---
[
    "diff",
    "-U999999",
    "abc123~1",
    "abc123",
]
