tools/gd/src/git/snapshots/gd__git__tests__snapshot_full_context_args_staged.snap
---
source: gd/src/git/mod.rs
expression: "DiffSource::Staged.diff_args_full_context()"
---
[
    "diff",
    "-U999999",
    "--staged",
]
