tools/gd/src/git/snapshots/gd__git__tests__snapshot_resolve_source_commit.snap
---
source: gd/src/git/mod.rs
expression: "resolve_source(false, &[\"abc123\".into()])"
---
Commit(
    "abc123",
)
