tools/gd/src/git/snapshots/gd__git__tests__snapshot_resolve_source_range_dotdot.snap
---
source: gd/src/git/mod.rs
expression: "resolve_source(false, &[\"main..HEAD\".into()])"
---
Range(
    "main",
    "HEAD",
)
